@@ -1,3 +1,9 @@
+2006-01-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* src/gdict-applet.c (gdict_applet_init): fix stupid typo.
+
+	* libgdict/gdict-source-loader.c: remove unnecessary cast.
+
 2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* src/gdict-applet.c (gdict_applet_init):
